# AnymaEngine

./: .gitignore  Build.bat  Build.sh  BuildWasm.bat  CMakeLists.txt  Readme.md  UploadToItch.bat  UploadToItch.ps1  build.bat  c_cpp_properties.json  imgui.ini  vcpkg.json
.VSCodeCounter/2024-03-03_18-27-58/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-03-03_20-51-58/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
Src/: Agent.cpp  Agent.h  AnymUtil.h  Anyma.cpp  Array.h  Brain.h  Camera2D.cpp  Camera2D.h  DebugInfo.cpp  DebugInfo.h  EditorScreen.cpp  EditorScreen.h  Entity.h  External.cpp  External.h  InputHandler.h  Linalg.h  Lucide.h  Memory.h  Mesh2D.cpp  Mesh2D.h  Noise.h  ParticleSystem.cpp  Plant.cpp  Plant.h  Renderer.cpp  Renderer.h  SimulationScreen.cpp  SimulationScreen.h  SimulationSettings.h  Skeleton.cpp  TMath.h  ThreadPool.h  TiltCamera.cpp  TiltCamera.h  TimVectorMath.h  Window.cpp  Window.h  World.cpp  World.h
Src_/: Agent.h  Anyma.cpp  Linalg.cpp  Memory.cpp  ParticleSystem.h  SimulationScreen.cpp  SimulationScreen.h  Skeleton.h  TString.h  Texture.cpp  Verlet3.h  World.cpp
Test/: CMakeLists.txt
Test/Src/: TestLinAlg.cpp  TestString.cpp  TestThreadPool.cpp
src/: Agent.cpp  Agent.h  AnymUtil.h  Anyma.cpp  Array.h  Camera.cpp  Camera2D.cpp  Camera2D.h  DebugInfo.cpp  DebugInfo.h  EditorScreen.cpp  EditorScreen.h  Genome.cpp  Genome.h  ImGuiConfig.h  InputHandler.cpp  InputHandler.h  Linalg.h  Math.h  Memory.cpp  Memory.h  Mesh2D.cpp  Mesh2D.h  ParticleSystem.cpp  ParticleSystem.h  Render2D.cpp  Render2D.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  SimulationScreen.cpp  SimulationScreen.h  SimulationSettings.h  Skeleton.cpp  Skeleton.h  String.h  TMath.h  Texture.h  ThreadPool.h  (+10 more)
